--- a/buildings.html
+++ b/buildings.html
@@ -17,12 +17,12 @@
     <br>
     <hr>
     <ul class="flex-container">
-        <li class="flex-item">Building 1</li>
-        <li class="flex-item">Building 2</li>
-        <li class="flex-item">Building 3</li>
-        <li class="flex-item">Building 4</li>
-        <li class="flex-item">Building 5</li>
-        <li class="flex-item">Building 6</li>
+        <li class="flex-item"><button type="button" onclick="">Silver School of Arts and Science</button></li>
+        <li class="flex-item"><button type="button" onclick="">Student Link Center (Manhattan)</button></li>
+        <li class="flex-item"><button type="button" onclick="">Elmer Holmes Bobst Library</button></li>
+        <li class="flex-item"><button type="button" onclick="">Kimmel Center for University Life</button></li>
+        <li class="flex-item"><button type="button" onclick="">6 MetroTech Center, Brooklyn</button></li>
+        <li class="flex-item"><button type="button" onclick="">Student Link Center (Brooklyn)</button></li>
     </ul>
 </body>
 </html>
