--- a/floors.html
+++ b/floors.html
@@ -17,12 +17,12 @@
     <br>
     <hr>
     <ul class="flex-container">
-        <li class="flex-item">Floor 1</li>
-        <li class="flex-item">Floor 2</li>
-        <li class="flex-item">Floor 3</li>
-        <li class="flex-item">Floor 4</li>
-        <li class="flex-item">Floor 5</li>
-        <li class="flex-item">Floor 6</li>
+        <li class="flex-item"><button type="button" class="floor-btn" onclick="">Floor 1</button></li>
+        <li class="flex-item"><button type="button" class="floor-btn" onclick="">Floor 2</button></li>
+        <li class="flex-item"><button type="button" class="floor-btn" onclick="">Floor 3</button></li>
+        <li class="flex-item"><button type="button" class="floor-btn" onclick="">Floor 4</button></li>
+        <li class="flex-item"><button type="button" class="floor-btn" onclick="">Floor 5</button></li>
+        <li class="flex-item"><button type="button" class="floor-btn" onclick="">Floor 6</button></li>
     </ul>
 </body>
 </html>
