--- a/templates_2/floors.html
+++ b/templates_2/floors.html
@@ -3,11 +3,9 @@
 {% block container %}
 <h1>Search by floor now</h1>
 <hr>
-<form method="POST" action="{{ url_for('get_choice2') }}">
-
+<form action="">
     <label for="floor"><b><h2>Choose a floor</h2></b></label>
-
-    <select id="floors" name="floorNum">
+    <select id="floors" name="floors">
         <option value="floor-1">Floor 1</option>
         <option value="floor-2">Floor 2</option>
         <option value="floor-3">Floor 3</option>
@@ -16,11 +14,8 @@
         <option value="floor-6">Floor 6</option>
         <option value="floor-7">Floor 7</option>
     </select>
-
     <br>
     <br>
     <input type="submit" class="search-btn" value="Search">
-
 </form>
-
 {% endblock %}
